[gd_scene load_steps=6 format=3 uid="uid://bvdtplj3m7gvg"]

[ext_resource type="Script" uid="uid://ly4k3qd3dnr7" path="res://Player.gd" id="1_wa4lb"]
[ext_resource type="Texture2D" uid="uid://divxh4eei8k44" path="res://Recursos/Imagenes/Flecha (Gris).png" id="2_i3pqv"]
[ext_resource type="Script" uid="uid://bx1ocyc227me1" path="res://miss_box.gd" id="3_i3pqv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r48m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]

[node name="Player" type="Node2D"]
position = Vector2(340, -59)
script = ExtResource("1_wa4lb")
metadata/_edit_group_ = true

[node name="LeftInputHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftInputHitbox"]
position = Vector2(90, 629.99994)
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_7r48m")
debug_color = Color(1, 1, 1, 0)

[node name="Sprite2D" type="Sprite2D" parent="LeftInputHitbox/CollisionShape2D"]
texture_filter = 1
position = Vector2(-0.000263255, -0.000358826)
rotation = 4.712389
scale = Vector2(0.363, 0.363)
texture = ExtResource("2_i3pqv")

[node name="MissZone" type="Area2D" parent="LeftInputHitbox"]
position = Vector2(90, 792)
scale = Vector2(6, 6)
script = ExtResource("3_i3pqv")

[node name="MissBox2" type="CollisionShape2D" parent="LeftInputHitbox/MissZone"]
shape = SubResource("RectangleShape2D_hqtel")

[node name="RightInputHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightInputHitbox"]
position = Vector2(390, 630)
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_7r48m")
debug_color = Color(1, 1, 1, 0)

[node name="Sprite2D" type="Sprite2D" parent="RightInputHitbox/CollisionShape2D"]
rotation = 1.5707964
scale = Vector2(0.3634675, 0.3634675)
texture = ExtResource("2_i3pqv")

[node name="MissZone" type="Area2D" parent="RightInputHitbox"]
position = Vector2(240, 792)
scale = Vector2(6, 6)
script = ExtResource("3_i3pqv")

[node name="MissBox2" type="CollisionShape2D" parent="RightInputHitbox/MissZone"]
shape = SubResource("RectangleShape2D_hqtel")

[node name="DownInputHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DownInputHitbox"]
position = Vector2(240, 630)
scale = Vector2(6, 6)
shape = SubResource("RectangleShape2D_7r48m")
debug_color = Color(1, 1, 1, 0)

[node name="Sprite2D" type="Sprite2D" parent="DownInputHitbox/CollisionShape2D"]
scale = Vector2(0.363, 0.363)
texture = ExtResource("2_i3pqv")

[node name="MissZone" type="Area2D" parent="DownInputHitbox"]
position = Vector2(390, 792)
scale = Vector2(6, 6)
script = ExtResource("3_i3pqv")

[node name="MissBox2" type="CollisionShape2D" parent="DownInputHitbox/MissZone"]
shape = SubResource("RectangleShape2D_hqtel")

[connection signal="body_entered" from="LeftInputHitbox" to="." method="_on_left_input_hitbox_body_entered"]
[connection signal="body_exited" from="LeftInputHitbox" to="." method="_on_left_input_hitbox_body_exited"]
[connection signal="body_entered" from="RightInputHitbox" to="." method="_on_right_input_hitbox_body_entered"]
[connection signal="body_entered" from="DownInputHitbox" to="." method="_on_down_input_hitbox_body_entered"]
